test/e2e/cosuserauthpolicy.yaml
apiVersion: ibmcloud.ibm.com/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: cosuserauthpolicy
spec:
  source:   
    resourceGroup: Default
    serviceClass: cloud-object-storage
  roles: 
    - Reader
  target: 
    resourceGroup: Default
    serviceClass: kms
