test/e2e/cosuserpolicy.yaml
apiVersion: ibmcloud.ibm.com/v1alpha1
kind: AccessPolicy
metadata:
  name: cosuserpolicy
spec:
  subject:   
    userEmail: "avarghese@us.ibm.com"
  roles: 
    definedRoles:
      - Viewer
      - Reader
  target: 
    resourceGroup: Default
    serviceClass: cloud-object-storage
    serviceID: 1cdd19ff-c033-4767-b6b7-4fe2fc58c6a1
    resourceName: bucket
    resourceID: cos-standard-ansu
